--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -19,5 +19,12 @@
         <attr name="suTabSelfLayout" format="reference"/>
         <!--是否允许选中项加粗-->
         <attr name="suTabEnableSelectedTextBold" format="boolean"/>
+        <!--滚动模式-->
+        <attr name="suTabShowModel" format="enum">
+            <!--平均模式-->
+            <enum name="average" value="0"/>
+            <!--滚动模式-->
+            <enum name="scroll" value="1"/>
+        </attr>
     </declare-styleable>
 </resources>
