滚动模式添加宽度自适应（去所有tab标题中最长标题长度）

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,6 +13,7 @@
         app:suTabIndicatorWidth="40dp"
         app:suTabIndicatorBg="@drawable/ic_shape_tab"
         app:suTabIndicatorHeight="4dp"
+        app:suTabSelfLayout="@layout/self_tab_text"
         app:suTabShowModel="scroll"
         app:suTabTextSize="16dp"
         android:id="@+id/vTab"/>
