添加最低高度

--- a/app/src/main/res/layout/view_self_scroll_tab.xml
+++ b/app/src/main/res/layout/view_self_scroll_tab.xml
@@ -5,7 +5,8 @@
     android:layout_width="wrap_content"
     android:scrollbarSize="0dp"
     android:id="@+id/vHScrollTabBox"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:minHeight="35dp">
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
