--- a/app/src/main/res/layout/view_self_tab.xml
+++ b/app/src/main/res/layout/view_self_tab.xml
@@ -3,12 +3,13 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="match_parent"
+    android:minHeight="35dp">
 
     <LinearLayout
         android:id="@+id/vLlTabBox"
         android:layout_width="match_parent"
-        android:layout_height="45dp"
+        android:layout_height="match_parent"
         android:clipChildren="false"
         android:orientation="horizontal"
         app:layout_constraintTop_toTopOf="parent" />
