--- a/app/src/main/res/layout/view_self_scroll_tab.xml
+++ b/app/src/main/res/layout/view_self_scroll_tab.xml
@@ -9,14 +9,15 @@
     android:minHeight="35dp">
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="match_parent">
 
         <LinearLayout
             android:id="@+id/vLlTabBox"
             android:layout_width="match_parent"
-            android:layout_height="45dp"
+            android:layout_height="match_parent"
             android:clipChildren="false"
             android:orientation="horizontal"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
         <ImageView
