--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -7,6 +7,10 @@
         <attr name="suTabIndicatorWidth" format="dimension"/>
         <!--指示器背景-->
         <attr name="suTabIndicatorBg" format="reference"/>
+        <!--选中tab的背景-->
+        <attr name="suTabSelectedBg" format="reference"/>
+        <!--未选中tab的背景-->
+        <attr name="suTabUnselectedBg" format="reference"/>
         <!--选中tab字体颜色-->
         <attr name="suTabSelectedTextColor" format="color"/>
         <!--tab字体颜色-->
