--- a/app/src/main/res/drawable/ic_shape_tab.xml
+++ b/app/src/main/res/drawable/ic_shape_tab.xml
@@ -1,5 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <corners android:radius="10dp"/>
-    <gradient android:endColor="#00ff00" android:startColor="#ff00ff"/>
-</shape>
+<layer-list xmlns:android="http://schemas.android.com/apk/res/android">
+    <item android:width="10dp" android:height="10dp">
+        <shape>
+            <corners android:radius="10dp"/>
+            <solid android:color="@color/black"/>
+        </shape>
+    </item>
+</layer-list>
